--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "A set of tools to make working with service easier in Laravel",
   "type": "library",
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "laravel/framework": "^9.o"
   },
   "license": "MIT",
   "autoload": {
