--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "require": {
     "php": "^8.1",
-    "laravel/framework": "^9.o"
+    "laravel/framework": "^8.0"
   },
   "license": "MIT",
   "autoload": {
