--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,31 @@
 {
   "name": "joy2362/service-generator",
   "description": "A set of tools to make working with service easier in Laravel",
+  "keywords": [
+    "joy2362",
+    "laravel",
+    "service-generator",
+    "api-generator",
+    "api-helper"
+  ],
+  "homepage": "https://github.com/joy2362/service-generator",
   "type": "library",
   "require": {
     "php": "^8.1",
-    "laravel/framework": ">=8.0"
+    "illuminate/contracts": "^10.0"
+  },
+  "require-dev": {
+    "laravel/pint": "^1.0",
+    "nunomaduro/collision": "^7.9",
+    "nunomaduro/larastan": "^2.0.1",
+    "orchestra/testbench": "^8.0",
+    "pestphp/pest": "^2.0",
+    "pestphp/pest-plugin-arch": "^2.0",
+    "pestphp/pest-plugin-laravel": "^2.0",
+    "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-deprecation-rules": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0",
+    "spatie/laravel-ray": "^1.26"
   },
   "license": "MIT",
   "autoload": {
@@ -15,7 +36,8 @@
   "authors": [
     {
       "name": "joy2362",
-      "email": "abdullahzahidjoy@gmail.com"
+      "email": "abdullahzahidjoy@gmail.com",
+      "role": "Developer"
     }
   ],
   "minimum-stability": "dev",
@@ -23,7 +45,11 @@
   "config": {
     "sort-packages": true,
     "preferred-install": "dist",
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
   },
   "extra": {
     "laravel": {
