--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "homepage": "https://github.com/joy2362/service-generator",
   "type": "library",
   "require": {
-    "php": "^8.1",
+    "php": "^8.1"
   },
   "require-dev": {
     "laravel/pint": "^1.0",
